<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    tools:context="com.suitschool.screeningtest.HomeActivity"
    android:layout_centerVertical="true"
    android:background="@drawable/bg_validation"
    android:theme="@android:style/Theme.Holo"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="17sp"
        android:textColor="@color/defaultText"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />

    <TextView
        android:id="@+id/home_welcome_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/add_photo_text"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/defaultText"
        android:layout_marginTop="50dp"
        android:letterSpacing="0.1"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/home_profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/btn_add_photo"
        android:background="@drawable/circle_stroke"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/home_welcome_text"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/home_nama_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_nama"
        android:textColorHint="#ccc"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:textColor="#fff"
        android:background="@drawable/text_field"
        android:layout_below="@+id/home_profile_image"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/home_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/home_next_button"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:onClick="onClickNext"
        android:background="@drawable/my_button_bg"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp" />


</RelativeLayout>
